<resources>
    <string name="app_name">WhatsappClone</string>
    <!-- Cadastro Activity-->
    <string name="digitenome">Digite seu nome</string>
    <string name="digiteemail">Digite seu email</string>
    <string name="digitesenha">Digite sua senha</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="entrar">Entrar</string>
    <string name="naopossuilogin">Não tem uma conta? Cadastre-se</string>

    <string name="menu_pesquisar">Pesquisar</string>
    <string name="menu_config">Configurações</string>
    <string name="menu_sair">Sair</string>

    <string name="contatos">Contatos</string>
    <string name="conversas">Conversas</string>
    <string name="nome_usuario">Nome de Usuário</string>

    <string name="contato_nome">Nome do Usuário</string>
    <string name="contato_email">Email de Usuário</string>

    <string name="info_config">Este não é seu nome de usuário e/ou senha, este nome ficará visível para outros contatos do seu Whatsapp</string>
    <string name="mensagemEnviada">Mensagem enviada</string>
    <string name="mensagemRecebida">Mensagem recebida</string>
    <string name="title_activity_grupo">GrupoActivity</string>

    <!-- Activity cadastrar grupo -->
    <string name="nome_grupo">Nome do grupo</string>
    <string name="definicoes_grupo">Defina o nome do grupo, e uma imagem (opcional)</string>
    <string name="participantes_grupo">Participantes: 0</string>

    <!-- Content description -->
    <string name="fab_criar_grupo">Floating action button para criação de grupo</string>
    <string name="fab_enviar_mensagem">Floating action button para enviar mensagem</string>
    <string name="fab_confirmar_criar_grupo">Floating action button para confirmar criação de grupo</string>
</resources>